# Spres-Ai-Agent

./: BACKEND.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  PROJECT_STRUCTURE.md  PUBLISHING_GUIDE.md  QUICK_START.md  README.md  SDK_REFERENCE.md  WHAT_WAS_CREATED.txt  requirements.txt  url.txt
brainBox/: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  INSTALLATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_no_pillow.txt  setup.bat  setup.py  setup.sh  test-docker-compose.yml  test.docker-compose.yml
brainBox/app/: config.py  dependencies.py  main.py
brainBox/app/agents/: graph.py  state.py
brainBox/app/agents/nodes/: log_node.py
brainBox/app/agents/tools/: postgres_search.py  vector_search.py
brainBox/app/api/: auth.py  chat.py  health.py  ingest.py
brainBox/app/celery_app/: celery.py  tasks.py
brainBox/app/chunkers/: code.py  csv.py  json.py  logs.py
brainBox/app/db/: models.py  session.py
brainBox/app/embeddings/: generator.py  model.py
brainBox/app/ingestion/: dedupe.py  pipeline.py
brainBox/app/llm/: ollama_client.py  openai_client.py
brainBox/app/redis_cache/: cache.py
brainBox/app/schemas/: chat.py  ingest.py
brainBox/app/utils/: hashing.py  logging.py  security.py
brainBox/tests/: test_api.py
sdk-cli/: .gitignore  README.md  brainbox-cli.service  brainbox_cli.py  build-deb.sh  build-rpm.sh  install.sh  setup.py
sdk-cli/debian/: control
sdk-database/: .gitignore  README.md  brainbox_db.py  setup.py
sdk-node/: .npmignore  README.md  brainbox-sdk.js  package.json
sdk-python/: README.md  brainbox_sdk.py  pyproject.toml  setup.py
sdk-python/brainbox_sdk.egg-info/: PKG-INFO  SOURCES.txt
sdk-python/spres_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk-react/: .gitignore  README.md  brainbox-sdk.ts  package-lock.json  package.json  preview.html  tsconfig.json
sdk-react-native/: .gitignore  ChatScreen.js  README.md  index.js  package.json
sdk-react/preview/: index.html  package-lock.json  package.json  vite.config.js
sdk-react/preview/src/: App.jsx
sdk-react/src/: ChatPanel.tsx  ChatWidget.tsx  brainbox-sdk.ts  index.ts  types.ts  useBrainboxChat.ts
sdk-web/: README.md  brainbox-web-sdk.js  widget-example.html
