[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainbox"
version = "1.0.0"
description = "Production AI Backend for REST AI Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "REST AI Team", email = "team@restai.com"}
]
keywords = ["ai", "backend", "langraph", "embeddings", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.2",
    "langchain>=0.1.3",
    "langgraph>=0.0.29",
    "llama-index>=0.9.27",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.2",
    "openai>=1.3.9",
    "PyJWT>=2.8.1",
    "python-multipart>=0.0.6",
    "alembic>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/restai/brainbox"
Documentation = "https://docs.restai.com"
Repository = "https://github.com/restai/brainbox"
Issues = "https://github.com/restai/brainbox/issues"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
